# record

./: LICENSE  Makefile  README.md  pyproject.toml  record.completion  record.fish  record.zsh-completion  tox.ini
record/: __init__.py  __main__.py  autocompletion.py  cli.py  frames.py  fullmoon.py  record.py  utils.py
scripts/: create-completion-script.sh  fuzzer.py
tests/: conftest.py  test_autocompletion.py  test_cli.py  test_config.py  test_fullmoon.py  test_record.py  test_utils.py
