[project]
name = "rec"
version = "0.1.0"
description = "Track your time, right in your terminal. It just works."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arrow>=1.0.0",
    "click>=8.0",
    "click-didyoumean>=0.3.1",
    "colorama>=0.4.6 ; sys_platform == 'win32'",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mkdocs>=1.6.1",
    "mkdocs-bootswatch>=1.1",
    "py>=1.11.0",
    "pytest>=8.4.1",
    "pytest-datafiles>=3.0.0",
    "pytest-mock>=3.14.1",
    "pytest-runner>=6.0.1",
    "tox>=4.27.0",
    "twine>=6.1.0",
    "wheel>=0.45.1",
]
